<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/back_to_list_page"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/go_back" />

    <LinearLayout
        android:id="@+id/timer_naming"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/back_to_list_page"
        android:paddingBottom="50dp">

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/timer_name" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/timer_name"
            android:layout_width="210dp"
            android:layout_height="wrap_content"
            android:maxLength="20"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="245dp"
        android:layout_height="245dp"
        android:layout_below="@+id/timer_naming"
        android:layout_centerInParent="true"
        android:layout_centerHorizontal="true"
        android:background="@drawable/circle"
        android:gravity="center"
        android:orientation="horizontal">

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/hours"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:digits="0123456789"
            android:hint="@string/hour"
            android:inputType="number"
            android:maxLength="2" />

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/colon" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/minutes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:digits="0123456789"
            android:hint="@string/minute"
            android:inputType="number"
            android:maxLength="2" />

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/colon" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/seconds"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:digits="0123456789"
            android:hint="@string/second"
            android:inputType="number"
            android:maxLength="2" />

    </LinearLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/reset_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:text="@string/reset_button"
        tools:ignore="RelativeOverlap" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/start_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:text="@string/start" />

</RelativeLayout>
