<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingStart="10dp"
    android:paddingEnd="0dp">

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/back_to_list_page"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/go_back" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/back_to_list_page"
        android:text="@string/app_name" />

    <LinearLayout
        android:layout_width="245dp"
        android:layout_height="245dp"
        android:layout_below="@+id/name"
        android:layout_centerInParent="true"
        android:layout_centerHorizontal="true"
        android:background="@drawable/circle"
        android:gravity="center"
        android:orientation="horizontal">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/hours"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/_00" />

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/colon" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/minutes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/_00" />

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/colon" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/seconds"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/_00" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/status_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/plus_one_minute"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/plus_1_min" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/minus_one_minute"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/minus_1_min" />

    </LinearLayout>

</RelativeLayout>
