<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/back_to_list_page"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/go_back" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/about_app"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/back_to_list_page"
        android:text="@string/about_app" />

    <LinearLayout
        android:id="@+id/rating_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/about_app"
        android:orientation="horizontal">

        <androidx.appcompat.widget.AppCompatSeekBar
            android:id="@+id/rating"
            android:layout_width="300dp"
            android:layout_height="wrap_content" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/rating_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_0" />
    </LinearLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/submit_review"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/rating_layout"
        android:text="@string/submit" />

</RelativeLayout>